# epg

./: pyproject.toml
src/: bot.py
src/epg/: epg.py  main.py
src/epg/spiders/: cctv.py  sdtv.py
tests/: sdtv.py
