[project]
name = "epg"
version = "0.0.1"
description = ""
authors = [
    {name = "txrTanzi", email = "txrtanzi@gmail.com"},
]
dependencies = [
    "flask>=3.0.0",
    "httpx>=0.25.2",
    "ujson>=5.8.0",
    "uvloop>=0.19.0",
    "python-dateutil>=2.8.2",
    "Flask-SQLAlchemy>=3.1.1",
    "lxml>=4.9.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

